chapter12 work2 fixed

--- a/myproject/templates/mysql_work2.html
+++ b/myproject/templates/mysql_work2.html
@@ -13,8 +13,8 @@
    </style>
 </head>
 <body>
-
-   <h1>追加したい商品の名前と価格を入力してください</h1> <br>
+   <h1>追加したい商品の名前と価格を入力してください</h1>
+   <p><h2>{{ result }}</h2></p>
 
    <form action="" method="">
        <label>商品名：<input type="text" name="name"></label>
