--- a/myproject/templates/bbs.html
+++ b/myproject/templates/bbs.html
@@ -14,7 +14,7 @@
     <p>【入力可能文字数】名前：20文字まで　コメント：100文字まで</p>
     <p><h2>{{ result }}</h2></p>
 
-    <form action="" method="">
+    <form action="bbs" method="post">
        <label>名前：<input type="text" name="name"></label>
        <label>ひとこと：<input type="text" name="comment" size="50"></label>
        <input type="submit" value="送信">
