--- a/myproject/templates/bbs.html
+++ b/myproject/templates/bbs.html
@@ -5,27 +5,27 @@
    <title>ひとこと掲示板</title>
    <style type="text/css">
     table {
-        width: 400px;
+        width: 1000px;
     }
 </style>
 </head>
 <body>
     <h1>ひとこと掲示板</h1>
     <p>【入力可能文字数】名前：20文字まで　コメント：100文字まで</p>
-    <p><h2>{{ result }}</h2></p>
+    <p>{{ result }}</p>
 
-    <form action="bbs" method="post">
+    <form action="" method="post">
        <label>名前：<input type="text" name="name"></label>
        <label>ひとこと：<input type="text" name="comment" size="50"></label>
        <input type="submit" value="送信">
-    </form>
+    </form> <br>
 
     <table>
-        {% for item in bbs %}
+        {% for thread in bbs %}
         <tr>
-             <td>{{ item.name }}</td>
-             <td>{{ item.comment }}</td>
-             <td>{{ item.date }}</td>
+             <td>{{ thread.name }}</td>
+             <td>{{ thread.comment }}</td>
+             <td>{{ thread.date }}</td>
         </tr>
         {% endfor %}
      </table>
